<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="label_imc">IMC</string>
    <string name="label_tmb">TMB</string>
    <string name="label_fcm">FCM</string>
    <string name="label_fat_perc">% GORDURA</string>
    <string name="imc_desc">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso
        do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal,
        acima ou abaixo do peso desejado.\n\nPreencha os campos de peso e altura para descobrir o seu IMC</string>
    <string name="weigth">Peso (Kg)</string>
    <string name="heigth">Altura (cm)</string>
    <string name="calc">CALCULAR</string>
    <string name="fields_message">Todos os campos devem ser maiores que zero.</string>
    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>
    <string name="imc_response">Imc: %1$.2f</string>
    <string name="save">Salvar</string>
    <string name="calc_saved">Registro salvo com sucesso!</string>
    <string name="calc_removed">Registro removido com sucesso!</string>
    <string name="search">Buscar registros…</string>
    <string name="tmb_desc">TMB é o cálculo para descobrir a quantidade calórica que o corpo necessita com base no seu estilo de vida</string>
    <string name="age">Idade</string>
    <string name="tmb_response">Tmb: %1$.2f</string>
    <string name="delete_message">Você realmente quer excluir o registro?</string>
    <string name="delete">DELETAR</string>
    <string name="update">Atualizado com sucesso!</string>
    <string name="cancel">Cancelar</string>
    <string name="list_response">ID: %1$d - Resultado: %2$.2f Data: %3$s</string>
    <string name="obs_txt">Seu app para ajudar com cálculos relacionados a saúde! \n\n Observação importante, o uso do app não substitui uma \n consulta com o profissional de saude!</string>
    <string name="fcm_text">O que você precisa saber sobre a frequência cardíaca máxima: \n</string>
    <string name="fcm_desc">A Frequência Cardíaca (FC) é o número de batimentos do coração em um minuto;\n\n A FCmax (Frequência Cardíaca Máxima) é o número máximo de batimentos que o coração pode dar em um minuto;\n A FCmax é pouco influenciada pelo treino;\n A FCmax diminui progressivamente com a idade (perdemos cerca de 1 pulsação por ano);\n\n A FC em repouso evolui em função da condição física: quanto mais treinar, mais a sua FC em repouso diminui.</string>
    <string name="fcm_tip">Como determinar a FCMAX?</string>
    <string name="cfm_answer">Sua Frequência cardiaca máxima é de: %1$.2f</string>
    <string name="perc_answer">Seu percentual de gordura corporal é de: %1$.2f</string>
    <string name="male">Homem</string>
    <string name="female">Mulher</string>
    <string name="fcm_tip_title">1. O método Astrand, que consiste na aplicação da seguinte fórmula:</string>
    <string name="desc_example_fcm"><![CDATA[Nas mulheres: 226 (-) a idade.\n Exemplo: para uma mulher de 40 anos => 226 (-) 40 = 186 pulsações.\n Nos homens: 220 (-) a idade.\n Exemplo: para um homem de 40 anos => 220 (-) 40 = 180 pulsações.]]></string>
    <string name="desc_fcm">É um método simples que pode ser aplicado imediatamente, mas é também mais teórico e equivale à média, portanto, pode não ser preciso para todo praticante de corrida.</string>
    <string name="desc_two_fcm">2. O teste no terreno (esse sim garante de forma precisa a FCmax):</string>
    <string name="fcmax_desc_optwo">Para determinar com mais precisão sua FCmax você deve fazer o seguinte: faça um aquecimento de cerca de vinte minutos acelerando por 100 metros ou 30 segundos até atingir o máximo das suas possibilidades (tem que se esforçar ao máximo). Em seguida, faça o mesmo, mas agora em 1000 metros ou durante 4 minutos. No final, verifique o número que aparece em seu monitor cardíaco, esta é a sua FCmax.</string>
    <string name="perc_title">Como é calculado o percentual\n de gordura corporal?</string>
    <string name="perc_desc">O nosso corpo é composto basicamente por massa magra (músculos e vísceras), massa gorda (gordura) e água.\n\nO percentual de gordura é um dos índices utilizados para avaliar a nossa composição corporal, porém alguns fatores devem ser levados em consideração — como o biótipo do indivíduo, que pode afetar diretamente na sua capacidade de acumular gordura.\n\nPara calcular a porcentagem de gordura corporal, podemos utilizar a fórmula:\n\nBT= (1,20 x IMC) + (0,23 x idade) – (10,8 x sexo) – 5.4.</string>
    <string name="title_fcm_tip">Existem duas formas de determinar \na frequência cardiaca máxima:</string>
    <string name="credits">By: Riann</string>
    <string name="label_auto_complete_tv">Frequência de exercícios...</string>
    <string name="logo">Logo from the cell</string>
</resources>