<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eraz_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_calc_menu"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perc_title"
            android:textColor="@color/container"
            android:paddingBottom="8dp"
            android:textSize="20sp" />

        <TextView
            style="@style/TextViewForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perc_desc"
            android:textColor="@color/container"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="5"
            style="@style/TextViewForm"
            android:id="@+id/edit_perc_imc"
            android:hint="@string/label_imc"/>


        <RadioGroup
            android:id="@+id/radio_group_perc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_btn_man_perc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radio_btn_fem_perc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </RadioGroup>


        <EditText
            android:layout_marginTop="32dp"
            android:id="@+id/edit_perc_age"
            style="@style/EditTextForm"
            android:hint="@string/age" />

        <Button
            android:id="@+id/perc_send"
            style="@style/ButtonForm"
            android:layout_marginBottom="24dp"
            android:text="@string/calc" />

    </LinearLayout>

</ScrollView>