<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity">

        <TextView
            style="@style/TextViewForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc_desc" />

        <EditText
            style="@style/EditTextForm"
            android:id="@+id/edit_imc_weigth"
            android:hint="@string/weigth"/>

        <EditText
            style="@style/EditTextForm"
            android:id="@+id/edit_imc_heigth"
            android:hint="@string/heigth"/>

        <Button
            style="@style/ButtonForm"
            android:id="@+id/btn_imc_send"
            android:text="@string/calc"/>

    </LinearLayout>

</ScrollView>