<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eraz_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity"
        android:background="@drawable/shape_calc_menu"
        >

        <TextView
            style="@style/TextViewForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmb_desc"
            android:textSize="16sp"
            android:textColor="@color/container"/>

        <EditText
            style="@style/EditTextForm"
            android:id="@+id/edit_tmb_weigth"
            android:hint="@string/weigth"
            android:importantForAutofill="no" />

        <EditText
            style="@style/EditTextForm"
            android:id="@+id/edit_tmb_heigth"
            android:hint="@string/heigth"
            android:importantForAutofill="no" />

        <EditText
            style="@style/EditTextForm"
            android:id="@+id/edit_tmb_age"
            android:hint="@string/age"
            android:importantForAutofill="no" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AutoTextViewForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:hint="@string/label_auto_complete_tv"
                android:id="@+id/auto_life_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/container"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            style="@style/ButtonForm"
            android:id="@+id/btn_tmb_send"
            android:text="@string/calc"/>

    </LinearLayout>

</ScrollView>